--- a/src/components/PaymentButton/PaymentButton.html
+++ b/src/components/PaymentButton/PaymentButton.html
@@ -1,11 +1,3 @@
-<br><br><br>
-
 <div class="PaymentButton">
-  <div class="flower-container d-flex justify-content-center align-items-center flex-wrap">
-    <button class="btn btn-primary flower-btn">Mesaj Kutusu</button>
-    <button class="btn btn-success flower-btn">Kişisel Bilgiler</button>
-    <button class="btn btn-info flower-btn">Hesap</button>
-    <button class="btn btn-warning flower-btn">Takvim</button>
-    <button class="btn btn-danger flower-btn">Sipariş</button>
-  </div>
+    <button class="btn btn-info payment-btn">Hesap</button>
   </div>
