--- a/src/components/WaiterScreen/WaiterScreen.html
+++ b/src/components/WaiterScreen/WaiterScreen.html
@@ -1,5 +1,11 @@
 <div class="WaiterScreen">
     <!-- HTML içeriğiniz buraya -->
 <h1 class="text-primary text-center">Hello Waiter</h1>
+<div class="WaiterContainer d-flex justify-content-center align-items-center flex-wrap">
 <PaymentButton />
+<OrderButton />
+<CalendarButton />
+<PersonalInfoButton />
+<MessageBoxButton />
+</div>
   </div>
