--- a/src/components/MessageBoxButton/MessageBoxButton.html
+++ b/src/components/MessageBoxButton/MessageBoxButton.html
@@ -1,3 +1,4 @@
 <div class="MessageBoxButton">
     <!-- HTML -->
+    <button class="btn btn-primary message-box-btn">Mesaj Kutusu</button>
   </div>
