--- a/src/components/PersonalInfoButton/PersonalInfoButton.html
+++ b/src/components/PersonalInfoButton/PersonalInfoButton.html
@@ -1,3 +1,4 @@
 <div class="PersonalInfoButton">
     <!-- HTML -->
+  <button class="btn btn-success personal-info-btn">Kişisel Bilgiler</button>
   </div>
