--- a/src/components/OrderButton/OrderButton.html
+++ b/src/components/OrderButton/OrderButton.html
@@ -1,3 +1,3 @@
 
     <!-- HTML -->
-    <button class="btn btn-danger order-btn">Sipariş</button>
+    <button class="btn btn-info order-btn">Sipariş</button>
