--- a/src/components/PaymentButton/PaymentButton.html
+++ b/src/components/PaymentButton/PaymentButton.html
@@ -1,3 +1,3 @@
 <div class="PaymentButton">
-    <button class="btn btn-info payment-btn">Hesap</button>
+    <button class="btn btn-danger payment-btn">Hesap</button>
   </div>
