--- a/src/components/SeatPlan/SeatPlan.html
+++ b/src/components/SeatPlan/SeatPlan.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 position-relative">
+<div class="container mt-5">
   <!-- Deniz Row -->
   <div class="row justify-content-center mb-3">
     <div class="col-12 text-center">
@@ -7,38 +7,39 @@
   </div>
 
   <!-- I1 to I10 Row -->
-  <div class="row justify-content-center mb-3">
+  <div class="row justify-content-center mb-3 g-2">
     <div class="col-auto">
-      <div class="border p-3">I1</div>
+      <div class="seat-box p-3 text-center">I1</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">I2</div>
+      <div class="seat-box p-3 text-center">I2</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">I3</div>
+      <div class="seat-box p-3 text-center">I3</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">I4</div>
+      <div class="seat-box p-3 text-center">I4</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">I5</div>
+      <div class="seat-box p-3 text-center">I5</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">I6</div>
+      <div class="seat-box p-3 text-center">I6</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">I7</div>
+      <div class="seat-box p-3 text-center">I7</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">I8</div>
+      <div class="seat-box p-3 text-center">I8</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">I9</div>
+      <div class="seat-box p-3 text-center">I9</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">I10</div>
+      <div class="seat-box p-3 text-center">I10</div>
     </div>
   </div>
+  <br><br>
 
   <!-- Separator Row -->
   <div class="row justify-content-center mb-3">
@@ -48,102 +49,95 @@
   </div>
 
   <!-- S1 to S10 Row -->
-  <div class="row justify-content-between mb-3 position-relative">
+  <div class="row justify-content-between mb-3 g-1">
     <div class="col-auto">
-      <div class="border p-3">S1</div>
+      <div class="seat-box p-2 text-center">S1</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">S2</div>
+      <div class="seat-box p-3 text-center">S2</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">S3</div>
+      <div class="seat-box p-3 text-center">S3</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">S4</div>
+      <div class="seat-box p-3 text-center">S4</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">S5</div>
-    </div>
-
-    <!-- İskele (sabitlenmiş) -->
-    <div class="position-absolute start-50 translate-middle text-center">
-      <div class="p-3">İskele</div>
-    </div>
-
-    <div class="col-auto">
-      <div class="border p-3">S6</div>
+      <div class="seat-box p-3 text-center">S5</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">S7</div>
+      <div class="seat-box p-3 text-center">S6</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">S8</div>
+      <div class="seat-box p-3 text-center">S7</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">S9</div>
+      <div class="seat-box p-3 text-center">S8</div>
     </div>
     <div class="col-auto">
-      <div class="border p-3">S10</div>
+      <div class="seat-box p-3 text-center">S9</div>
+    </div>
+    <div class="col-auto">
+      <div class="seat-box p-2 text-center">S10</div>
     </div>
   </div>
 
-  <!-- WC ve M2 Row (S10 ve S20 arasında) -->
+  <!-- WC ve M2 Row (Sağ ve Sol Orta) -->
+  <br><br>
   <div class="row justify-content-between mb-3">
-    <div class="col-auto">
-      <div class="border p-3">WC</div> <!-- WC kutusu -->
+    <div class="col-auto d-flex flex-column align-items-center">
+      <div class="seat-box p-3 text-center mb-2">WC</div> <!-- WC kutusu -->
+      <br>
+      <div class="seat-box p-3 text-center">M1</div> <!-- O kutusu -->
     </div>
-    <div class="col-auto">
-      <div class="border p-3">M2</div> <!-- M2 kutusu -->
-    </div>
-  </div>
-
-  <!-- O ve M Row -->
-  <div class="row justify-content-between mb-3">
-    <div class="col-auto">
-      <div class="border p-3">O</div> <!-- O kutusu -->
-    </div>
-    <div class="col-auto">
-      <div class="border p-3">M</div> <!-- M kutusu -->
+    <br>
+    <div class="col-auto d-flex flex-column align-items-center">
+      <div class="seat-box p-3 text-center mb-2">M2</div> <!-- M2 kutusu -->
+      <br>
+      <div class="seat-box p-3 text-center">YO</div> <!-- M kutusu -->
     </div>
   </div>
+  <br>
 
-  <!-- S11 to S20 Row -->
-  <div class="row justify-content-between mb-3 position-relative">
-    <div class="col-auto">
-      <div class="border p-3">S11</div>
+  <br><br>
+    <!-- S1 to S10 Row -->
+    <div class="row justify-content-between mb-3 g-1">
+      <div class="col-auto">
+        <div class="seat-box p-2 text-center">G1</div>
+      </div>
+      <div class="col-auto">
+        <div class="seat-box p-3 text-center">G2</div>
+      </div>
+      <div class="col-auto">
+        <div class="seat-box p-3 text-center">G3</div>
+      </div>
+      <div class="col-auto">
+        <div class="seat-box p-3 text-center">G4</div>
+      </div>
+      <div class="col-auto">
+        <div class="seat-box p-3 text-center">G5</div>
+      </div>
+      <div class="col-auto">
+        <div class="seat-box p-3 text-center">G6</div>
+      </div>
+      <div class="col-auto">
+        <div class="seat-box p-3 text-center">G7</div>
+      </div>
+      <div class="col-auto">
+        <div class="seat-box p-3 text-center">G8</div>
+      </div>
+      <div class="col-auto">
+        <div class="seat-box p-3 text-center">G9</div>
+      </div>
+      <div class="col-auto">
+        <div class="seat-box p-2 text-center">G10</div>
+      </div>
     </div>
-    <div class="col-auto">
-      <div class="border p-3">S12</div>
-    </div>
-    <div class="col-auto">
-      <div class="border p-3">S13</div>
-    </div>
-    <div class="col-auto">
-      <div class="border p-3">S14</div>
-    </div>
-    <div class="col-auto">
-      <div class="border p-3">S15</div>
-    </div>
+</div>  
 
-    <!-- Giriş (sabitlenmiş) -->
-    <div class="position-absolute start-50 translate-middle text-center">
-      <div class="p-3">Giriş</div>
-    </div>
-
-    <div class="col-auto">
-      <div class="border p-3">S16</div>
-    </div>
-    <div class="col-auto">
-      <div class="border p-3">S17</div>
-    </div>
-    <div class="col-auto">
-      <div class="border p-3">S18</div>
-    </div>
-    <div class="col-auto">
-      <div class="border p-3">S19</div>
-    </div>
-    <div class="col-auto">
-      <div class="border p-3">S20</div>
-    </div>
+<br><br>
+<div class="row justify-content-center mb-3">
+  <div class="col-12 text-center">
+    <span class="badge bg-success">Giriş</span>
   </div>
 </div>
