--- a/src/components/SeatPlan/SeatPlan.html
+++ b/src/components/SeatPlan/SeatPlan.html
@@ -8,38 +8,37 @@
 
   <!-- I1 to I10 Row -->
   <div class="row justify-content-center mb-3 g-2">
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('I1')">
       <div class="seat-box p-3 text-center">I1</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('I2')">
       <div class="seat-box p-3 text-center">I2</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('I3')">
       <div class="seat-box p-3 text-center">I3</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('I4')">
       <div class="seat-box p-3 text-center">I4</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('I5')">
       <div class="seat-box p-3 text-center">I5</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('I6')">
       <div class="seat-box p-3 text-center">I6</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('I7')">
       <div class="seat-box p-3 text-center">I7</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('I8')">
       <div class="seat-box p-3 text-center">I8</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('I9')">
       <div class="seat-box p-3 text-center">I9</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('I10')">
       <div class="seat-box p-3 text-center">I10</div>
     </div>
   </div>
-  <br><br>
 
   <!-- Separator Row -->
   <div class="row justify-content-center mb-3">
@@ -50,89 +49,83 @@
 
   <!-- S1 to S10 Row -->
   <div class="row justify-content-between mb-3 g-1">
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('S1')">
       <div class="seat-box p-2 text-center">S1</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('S2')">
       <div class="seat-box p-3 text-center">S2</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('S3')">
       <div class="seat-box p-3 text-center">S3</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('S4')">
       <div class="seat-box p-3 text-center">S4</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('S5')">
       <div class="seat-box p-3 text-center">S5</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('S6')">
       <div class="seat-box p-3 text-center">S6</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('S7')">
       <div class="seat-box p-3 text-center">S7</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('S8')">
       <div class="seat-box p-3 text-center">S8</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('S9')">
       <div class="seat-box p-3 text-center">S9</div>
     </div>
-    <div class="col-auto">
+    <div class="col-auto" @click="navigateToTable('S10')">
       <div class="seat-box p-2 text-center">S10</div>
     </div>
   </div>
 
   <!-- WC ve M2 Row (Sağ ve Sol Orta) -->
-  <br><br>
   <div class="row justify-content-between mb-3">
     <div class="col-auto d-flex flex-column align-items-center">
-      <div class="seat-box p-3 text-center mb-2">WC</div> <!-- WC kutusu -->
-      <br>
-      <div class="seat-box p-3 text-center">M1</div> <!-- O kutusu -->
+      <div class="seat-box p-3 text-center mb-2" style="cursor: not-allowed; opacity: 0.5;">WC</div>
+      <div class="seat-box p-3 text-center mt-2" style="cursor: not-allowed; opacity: 0.5;">M1</div>
     </div>
-    <br>
     <div class="col-auto d-flex flex-column align-items-center">
-      <div class="seat-box p-3 text-center mb-2">M2</div> <!-- M2 kutusu -->
-      <br>
-      <div class="seat-box p-3 text-center">YO</div> <!-- M kutusu -->
+      <div class="seat-box p-3 text-center mb-2" style="cursor: not-allowed; opacity: 0.5;">M2</div>
+      <div class="seat-box p-3 text-center mt-2" style="cursor: not-allowed; opacity: 0.5;">YO</div>
     </div>
   </div>
-  <br>
 
-  <br><br>
-    <!-- S1 to S10 Row -->
-    <div class="row justify-content-between mb-3 g-1">
-      <div class="col-auto">
-        <div class="seat-box p-2 text-center">G1</div>
-      </div>
-      <div class="col-auto">
-        <div class="seat-box p-3 text-center">G2</div>
-      </div>
-      <div class="col-auto">
-        <div class="seat-box p-3 text-center">G3</div>
-      </div>
-      <div class="col-auto">
-        <div class="seat-box p-3 text-center">G4</div>
-      </div>
-      <div class="col-auto">
-        <div class="seat-box p-3 text-center">G5</div>
-      </div>
-      <div class="col-auto">
-        <div class="seat-box p-3 text-center">G6</div>
-      </div>
-      <div class="col-auto">
-        <div class="seat-box p-3 text-center">G7</div>
-      </div>
-      <div class="col-auto">
-        <div class="seat-box p-3 text-center">G8</div>
-      </div>
-      <div class="col-auto">
-        <div class="seat-box p-3 text-center">G9</div>
-      </div>
-      <div class="col-auto">
-        <div class="seat-box p-2 text-center">G10</div>
-      </div>
+  <!-- G1 to G10 Row -->
+  <div class="row justify-content-between mb-3 g-1">
+    <div class="col-auto" @click="navigateToTable('G1')">
+      <div class="seat-box p-2 text-center">G1</div>
     </div>
+    <div class="col-auto" @click="navigateToTable('G2')">
+      <div class="seat-box p-3 text-center">G2</div>
+    </div>
+    <div class="col-auto" @click="navigateToTable('G3')">
+      <div class="seat-box p-3 text-center">G3</div>
+    </div>
+    <div class="col-auto" @click="navigateToTable('G4')">
+      <div class="seat-box p-3 text-center">G4</div>
+    </div>
+    <div class="col-auto" @click="navigateToTable('G5')">
+      <div class="seat-box p-3 text-center">G5</div>
+    </div>
+    <div class="col-auto" @click="navigateToTable('G6')">
+      <div class="seat-box p-3 text-center">G6</div>
+    </div>
+    <div class="col-auto" @click="navigateToTable('G7')">
+      <div class="seat-box p-3 text-center">G7</div>
+    </div>
+    <div class="col-auto" @click="navigateToTable('G8')">
+      <div class="seat-box p-3 text-center">G8</div>
+    </div>
+    <div class="col-auto" @click="navigateToTable('G9')">
+      <div class="seat-box p-3 text-center">G9</div>
+    </div>
+    <div class="col-auto" @click="navigateToTable('G10')">
+      <div class="seat-box p-2 text-center">G10</div>
+    </div>
+  </div>
 </div>  
 
 <br>
