--- a/src/components/WaiterScreen/WaiterScreen.html
+++ b/src/components/WaiterScreen/WaiterScreen.html
@@ -1,6 +1,7 @@
 <div class="WaiterScreen">
     <!-- HTML içeriğiniz buraya -->
-<h1 class="text-primary text-center">Hello Waiter</h1>
+<h1 class="text-primary text-center">Hoş geldiniz</h1>
+<br>
 <div class="WaiterContainer d-flex justify-content-center align-items-center flex-wrap">
 <PaymentButton />
 <OrderButton />
