--- a/src/components/SeatPlan/SeatPlan.html
+++ b/src/components/SeatPlan/SeatPlan.html
@@ -134,3 +134,12 @@
     <span class="badge bg-success">Giriş</span>
   </div>
 </div>
+
+<br><br><br><br>
+<div class="row justify-content-center mb-3">
+  <div class="col-12 text-center">
+    <ul class="list-unstyled">
+      <li class="mb-3"><button class="btn btn-primary btn-lg w-100" @click="navigateToMain" v-if="!isEditing">Masalara Dön</button></li>
+    </ul>
+  </div>
+</div>
