--- a/src/components/OrderManagment/OrderManagment.html
+++ b/src/components/OrderManagment/OrderManagment.html
@@ -1,27 +1,46 @@
-<div class="container mt-5 d-flex flex-column align-items-center justify-content-center vh-100">
-  <div class="card text-center shadow-lg p-4">
-    <div class="card-body">
-      <h1 class="card-title display-4 mb-4">Masa: {{ tableId }}</h1>
-      <p class="lead">Sipariş İşlemleri Sayfası.</p>
-      <hr class="my-4">
 
-      <!-- Active Orders -->
-      <div class="my-5" v-if="orderDetails.length">
-        <h3 class="mb-4">Aktif Sipariş</h3>
-        <ul>
-          <li v-for="(product, index) in orderDetails" :key="index">
-            {{ product.name }} - {{ product.quantity }}
-          </li>
+  <div class="container mt-5 d-flex flex-column align-items-center justify-content-center vh-100">
+    <div class="card text-center shadow-lg p-4">
+      <div class="card-body">
+        <h1 class="card-title display-4 mb-4">Masa: {{ tableId }}</h1>
+        <p class="lead">Sipariş İşlemleri Sayfası.</p>
+        <hr class="my-4">
+
+        <!-- Active Orders -->
+        <div class="my-5" v-if="orderDetails.length">
+          <u><h3 class="mb-4">Aktif Sipariş</h3></u>
+          <ul>
+            <ul v-for="(product, index) in orderDetails" :key="index">
+              <div v-if="!isEditing && product.quantity > 0">
+                <h1 class="">
+                  {{ product.name }} - {{ product.quantity }}
+                </h1>
+              </div>
+              <div v-if="isEditing && product.quantity > -1">
+                <h1 :class="{ 'bg-warning text-primary': product.quantity > 0 }">
+                  {{ product.name }} - {{ product.quantity }}
+                </h1>
+                <button class="btn btn-outline-danger btn-sm mx-2" @click="decreaseQuantity(product)">-</button>
+                <button class="btn btn-outline-success btn-sm" @click="increaseQuantity(product)">+</button>
+              </div>
+            </ul>
+          </ul>
+        </div>
+
+        <!-- Options -->
+        <h2 class="mb-4">Masa {{ tableId }} İçin Seçenekler</h2>
+        <ul class="list-unstyled">
+          <li class="mb-3"><button class="btn btn-success btn-lg w-100" @click="createOrder" v-if="!isEditing">Sipariş Al</button></li>
+          <li class="mb-3"><button class="btn btn-warning btn-lg w-100" @click="toggleEdit" v-if="!isEditing">Siparişi Güncelle</button></li>
+          <li class="mb-3"><button class="btn btn-danger btn-lg w-100" @click="cancelOrder" v-if="!isEditing">Siparişi İptal et</button></li>
+          <li class="mb-3"><button class="btn btn-info btn-lg w-100" @click="bringBill" v-if="!isEditing">Hesap</button></li>
+          <li class="mb-3"><button class="btn btn-primary btn-lg w-100" @click="saveChanges" v-if="isEditing">Değişiklikleri Kaydet</button></li>
+          <li class="mb-3"><button class="btn btn-secondary btn-lg w-100" @click="toggleEdit" v-if="isEditing">İptal</button></li>
+        </ul>
+        <br>
+        <ul class="list-unstyled">
+          <li class="mb-3"><button class="btn btn-primary btn-lg w-100" @click="goToSeatPlan" v-if="!isEditing">Masalara Dön</button></li>
         </ul>
       </div>
-
-      <h2 class="mb-4">Masa {{ tableId }} İçin seçenekler</h2>
-      <ul class="list-unstyled">
-        <li class="mb-3"><button class="btn btn-success btn-lg w-100" @click="createOrder">Sipariş Al</button></li>
-        <li class="mb-3"><button class="btn btn-warning btn-lg w-100" @click="updateOrder">Siparişi Güncelle</button></li>
-        <li class="mb-3"><button class="btn btn-danger btn-lg w-100" @click="cancelOrder">Siparişi İptal et</button></li>
-        <li class="mb-3"><button class="btn btn-info btn-lg w-100" @click="bringBill">Hesap</button></li>
-      </ul>
     </div>
   </div>
-</div>
