--- a/src/components/CalendarButton/CalendarButton.html
+++ b/src/components/CalendarButton/CalendarButton.html
@@ -1,4 +1,4 @@
 <div class="CalendarButton">
     <!-- HTML -->
-    <button class="btn btn-success calendar-btn">Takvim</button>
+    <button class="btn btn-success calendar-btn" @click="goToCalendar">Takvim</button>
   </div>
