--- a/src/components/WaiterScreen/WaiterScreen.html
+++ b/src/components/WaiterScreen/WaiterScreen.html
@@ -3,7 +3,7 @@
 <h1 class="text-primary text-center">Hoş geldiniz</h1>
 <br>
 <div class="WaiterContainer d-flex justify-content-center align-items-center flex-wrap">
-<PaymentButton />
+<ReservationButton />
 <OrderButton />
 <CalendarButton />
 <PersonalInfoButton />
