--- a/src/components/SeatPlan/SeatPlan.html
+++ b/src/components/SeatPlan/SeatPlan.html
@@ -139,7 +139,7 @@
 <div class="row justify-content-center mb-3">
   <div class="col-12 text-center">
     <ul class="list-unstyled">
-      <li class="mb-3"><button class="btn btn-primary btn-lg w-100" @click="navigateToMain" v-if="!isEditing">Masalara Dön</button></li>
+      <li class="mb-3"><button class="btn btn-primary btn-lg w-100" @click="navigateToMain" v-if="!isEditing">Ana sayfaya dön</button></li>
     </ul>
   </div>
 </div>
