--- a/src/components/CalendarView/CalendarView.css
+++ b/src/components/CalendarView/CalendarView.css
@@ -43,7 +43,7 @@
 }
 
 .day.selected {
-  background-color: #007bff; /* Green color for selected day */
+  background-color: #007bff;
   color: white;
   border-radius: 50%;
 }
@@ -62,6 +62,16 @@
 .calendar-details {
   margin-top: 20px;
   text-align: center;
+}
+
+.show-popup-button {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .clear-button {
