--- a/src/components/CalendarView/CalendarView.html
+++ b/src/components/CalendarView/CalendarView.html
@@ -3,12 +3,13 @@
   <div class="current-date">
     Bugünkü Tarih: {{ formattedToday }}
   </div>
-  
+
   <div class="calendar-header">
     <button @click="prevMonth" class="nav-button">‹</button>
     <span class="month-year">{{ currentMonth }} {{ currentYear }}</span>
     <button @click="nextMonth" class="nav-button">›</button>
   </div>
+
   <div class="calendar-grid">
     <div class="day-name" v-for="day in days" :key="day">{{ day }}</div>
     <div
@@ -25,17 +26,24 @@
       {{ day }}
     </div>
   </div>
+
   <div class="calendar-details">
     <h5>Seçilen Tarih: {{ selectedDate || 'Tarih Seçilmedi' }}</h5>
     <button @click="clearDate" class="clear-button">Seçimi Temizle</button>
+    <button @click="showEventPopup" class="show-popup-button">Etkinliği Göster</button>
   </div>
+
+  <!-- Display pop-up if the showPopup is true -->
+  <CalendarEventPopUp v-if="showPopup" @close="closeEventPopup" />
+
 </div>
 
+<!-- Navigation button section -->
 <br><br><br><br>
 <div class="row justify-content-center mb-3">
   <div class="col-12 text-center">
     <ul class="list-unstyled">
-      <li class="mb-3"><button class="btn btn-primary btn-lg w-100" @click="navigateToMain" v-if="!isEditing">Ana sayfaya dön</button></li>
+      <li class="mb-3"><button class="btn btn-primary btn-lg w-100" @click="navigateToMain">Ana sayfaya dön</button></li>
     </ul>
   </div>
 </div>
