--- a/src/components/Popups/CalendarEventPopUp/CalendarEventPopUp.html
+++ b/src/components/Popups/CalendarEventPopUp/CalendarEventPopUp.html
@@ -1,7 +1,14 @@
 <div class="popup-overlay" @click="closePopup">
   <div class="popup-content" @click.stop>
     <h3>Etkinlik Bilgisi</h3>
-    <p>Bu tarihte mesai başlangıç saatiniz 09.00'dır.</p>
+    <p v-if="shift">
+      Tarih: {{ selectedDate }} <br />
+      Başlangıç Saati: {{ shift.startTime }} <br />
+      Bitiş Saati: {{ shift.endTime }}
+    </p>
+    <p v-else>
+      Belirtilen tarihe ait vardiya bulunamadı.
+    </p>
     <button @click="closePopup" class="close-button">Kapat</button>
   </div>
 </div>
