--- a/src/components/MessageBox/MessageBox.html
+++ b/src/components/MessageBox/MessageBox.html
@@ -83,3 +83,14 @@
       </li>
     </ul>
   </div>
+
+  <br><br><br><br>
+<div class="row justify-content-center mb-3">
+  <div class="col-12 text-center">
+    <ul class="list-unstyled">
+      <li class="mb-3">
+        <button class="btn btn-primary btn-lg w-100" @click="navigateToMain">Ana sayfaya dön</button>
+      </li>
+    </ul>
+  </div>
+</div>
