--- a/src/components/MessageBox/MessageBox.html
+++ b/src/components/MessageBox/MessageBox.html
@@ -57,7 +57,7 @@
         @keyup.enter="sendMessage"
         class="form-control"
       />
-      <button @click="sendMessage" class="btn btn-primary">Send</button>
+      <button @click="sendMessage" class="btn btn-primary">Gönder</button>
     </div>
 
     <!-- Geri Dön Butonu -->
