--- a/src/components/PersonalInfoButton/PersonalInfoButton.html
+++ b/src/components/PersonalInfoButton/PersonalInfoButton.html
@@ -1,4 +1,4 @@
 <div class="PersonalInfoButton">
     <!-- HTML -->
-  <button class="btn btn-warning personal-info-btn">Kişisel Bilgiler</button>
+  <button class="btn btn-warning personal-info-btn" @click="goToPersonalSettings">Kişisel Bilgiler</button>
   </div>
