--- a/src/components/ReservationButton/ReservationButton.html
+++ b/src/components/ReservationButton/ReservationButton.html
@@ -1,3 +1,3 @@
 <div class="ReservationButton">
-    <button class="btn btn-danger ReservationButton-btn">Rezervasyon</button>
+    <button class="btn btn-danger ReservationButton-btn" @click="goToReservationPlan">Rezervasyon</button>
   </div>
