--- a/src/components/Popups/ReservationPopUp/ReservationPopUp.html
+++ b/src/components/Popups/ReservationPopUp/ReservationPopUp.html
@@ -1,15 +1,29 @@
 <div class="reservation-popup" v-if="showPopup">
-  <h3>Rezervasyon Detayları</h3>
-  <p>Rezervasyon Saati: {{ reservation.time || 'Belirtilmemiş' }}</p>
-  <p>Rezervasyon Yapan: {{ reservation.name || 'Belirtilmemiş' }}</p>
+  <div class="popup-header">
+    <h3>Rezervasyon Detayları</h3>
+    <button type="button" class="close-btn" @click="closePopup">&times;</button>
+  </div>
+  
+  <div class="popup-body">
+    <p><strong>Rezervasyon Saati:</strong> {{ reservation.time || 'Belirtilmemiş' }}</p>
+    <p><strong>Rezervasyon Yapan:</strong> {{ reservation.name || 'Belirtilmemiş' }}</p>
 
-  <!-- Rezervasyon Saatini Değiştir -->
-  <input type="time" v-model="reservation.time" placeholder="Rezervasyon Saati">
-  <input type="text" v-model="reservation.name" placeholder="Rezervasyon Yapan İsim">
+    <!-- Rezervasyon Saatini Değiştir -->
+    <div class="mb-3">
+      <label for="reservationTime" class="form-label">Rezervasyon Saati</label>
+      <input type="time" id="reservationTime" class="form-control" v-model="reservation.time">
+    </div>
 
-  <!-- Pop-up Aksiyonları -->
-  <button @click="updateReservation">Rezervasyonu Güncelle</button>
-  <button @click="cancelReservation">Rezervasyonu İptal Et</button>
-  <button @click="createNewReservation">Yeni Rezervasyon Oluştur</button>
-  <button @click="closePopup">Kapat</button>
+    <div class="mb-3">
+      <label for="reservationName" class="form-label">Rezervasyon Yapan İsim</label>
+      <input type="text" id="reservationName" class="form-control" v-model="reservation.name" placeholder="İsim Girin">
+    </div>
+  </div>
+  
+  <div class="popup-footer">
+    <button class="btn btn-primary" @click="updateReservation">Güncelle</button>
+    <button class="btn btn-danger" @click="cancelReservation">İptal Et</button>
+    <button class="btn btn-success" @click="createNewReservation">Yeni Rezervasyon</button>
+    <button class="btn btn-secondary" @click="closePopup">Kapat</button>
+  </div>
 </div>
